# ros-z

./: .gitignore  .lychee.toml  .markdownlint.json  .markdownlintignore  .taplo.toml  .vale.ini  404.html  CONTRIBUTING.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  RELEASING.md  WORKFLOW_STATUS.md  _action-deadlock-study.md  ci.nix  cliff.toml  codecov.yml  flake.nix  index.html  mkdocs.yml  one.nu  print.html  rustfmt.toml  searchindex.js  test-docs.sh  toc.html  toc.js
book/: Cargo.toml  QUICK_REFERENCE.md  README.md  TESTING.md  WORKFLOW_VERIFICATION.md  book.toml
book/src/: SUMMARY.md  introduction.md
book/src/chapters/: actions.md  advanced.md  api_reference.md  backends.md  battery_state_sub.md  bridge.md  building.md  config.md  config_advanced.md  config_options.md  console-demos.md  console.md  contributing.md  custom_messages.md  demo_add_two_ints_client.md  demo_add_two_ints_server.md  demo_listener.md  demo_nodes.md  demo_talker.md  distro_compatibility.md  examples.md  examples_overview.md  feature_flags.md  go_bindings.md  go_quick_start.md  gpu-tensor-transport.md  interop.md  keyexpr_formats.md  laser_scan.md  lifecycle.md  message_cache.md  message_generation.md  networking.md  nix.md  parameters.md  protobuf.md  pubsub.md  python.md  python_codegen.md  quick_start.md  (+10 more)
crates/rmw-zenoh-rs/: CMakeLists.txt  Cargo.toml  README.md  binding.hpp  bindings.rs  build.rs  package.xml
crates/rmw-zenoh-rs/config/: DEFAULT_RMW_ZENOH_SESSION_CONFIG.json5
crates/rmw-zenoh-rs/cpp/: dummy_for_build.cpp
crates/rmw-zenoh-rs/include/: serde_bridge.h
crates/rmw-zenoh-rs/src/: bindings.rs  common.rs  context.rs  guard_condition.rs  msg.rs  node.rs  pubsub.rs  qos.rs  rmw.rs  ros.rs  ros_bindings.rs  serde_bridge.cc  service.rs  traits.rs  type_support.rs  utils.rs  wait_set.rs
crates/ros-z-bridge/: Cargo.toml
crates/ros-z-bridge-dds/: Cargo.toml  README.md
crates/ros-z-bridge-dds/src/: config.rs  main.rs
crates/ros-z-bridge-ros2dds/: Cargo.toml
crates/ros-z-bridge-ros2dds/src/: bridge.rs  config.rs  liveliness.rs  main.rs
crates/ros-z-bridge/src/: bridge.rs  discovery.rs  forwarder.rs  hash_registry.rs  (+2 more)
crates/ros-z-cdr/: Cargo.toml  README.md
crates/ros-z-cli/: Cargo.toml
crates/ros-z-codegen/: Cargo.toml  README.md
crates/ros-z-console/: Cargo.toml  README.md  build.rs
crates/ros-z-dds/: Cargo.toml  README.md
crates/ros-z-derive/: Cargo.toml  README.md
crates/ros-z-msgs/: Cargo.toml  README.md  build.rs
crates/ros-z-protocol/: Cargo.toml
crates/ros-z-py/: Cargo.toml  README.md  pyproject.toml
crates/ros-z-schema/: Cargo.toml
crates/ros-z-tests/: Cargo.toml  README.md  build.rs
cyclone/: CMakeLists.txt  Message.idl
cyclone/src/: receiver.cpp  sender.cpp
rcl-z/: Cargo.toml  build.rs  wrapper.hpp
rcl-z/include/: serde_bridge.h
rcl-z/src/: arguments.rs  common.rs  context.rs  event.rs  graph.rs  guard_condition.rs  init.rs  lib.rs  msg.rs  node.rs  pubsub.rs  qos.rs  ros.rs  serde_bridge.cc  service.rs  timer.rs  traits.rs  type_support.rs  utils.rs  validate_topic_name.rs  wait_set.rs
rcl-z/tests/: test_arguments.rs  test_client.rs  test_common.rs  test_context.rs  test_count_matched.rs  test_domain_id.rs  test_events.rs  test_expand_topic_name.rs  test_get_actual_qos.rs  test_get_node_names.rs  test_graph.rs  test_guard_condition.rs  test_info_by_topic.rs  test_init.rs  test_msgs_support.rs  test_namespace.rs  test_node.rs  test_publisher.rs  test_service.rs  test_subscription.rs  test_time.rs  test_timer.rs  test_validate_topic_name.rs  test_wait.rs
rmw-zenoh-rs/: Cargo.toml  binding.hpp  wrapper.hpp
rmw-zenoh-rs/include/: rmw_bridge.h  serde_bridge.h
rmw-zenoh-rs/src/: bindings.rs  common.rs  context.rs  guard_condition.rs  lib.rs  msg.rs  pubsub.rs  qos.rs  rmw.rs  service.rs  type_support.rs
ros-z/: Cargo.toml  build.rs
ros-z-cdr/: Cargo.toml
ros-z-cdr/src/: buffer.rs  deserializer.rs  error.rs  lib.rs  primitives.rs  serializer.rs
ros-z-cdr/tests/: cdr_tests.rs
ros-z-codegen/: Cargo.toml  build.rs
ros-z-codegen/src/: hashing.rs  lib.rs  protobuf_adapter.rs  python_msgspec_generator.rs  resolver.rs  roslibrust_adapter.rs  type_info_generator.rs  types.rs
ros-z-msgs/: Cargo.toml  PROTOBUF.md  build.rs
ros-z-msgs/src/: lib.rs  python_registry.rs
ros-z-msgs/tests/: serialization.rs  shm_size_estimation.rs  size_estimation_performance.rs  zbuf_serialization.rs
ros-z-tests/: Cargo.toml
ros-z-tests/tests/: dds_interop.rs  demo_nodes.rs  protobuf_demo.rs  protobuf_pubsub.rs  protobuf_service.rs  pubsub_interop.rs  python_interop.rs  service_backend.rs  service_interop.rs  shm_example.rs  type_description_integration.rs  type_description_interop.rs
ros-z/benches/: action_performance.rs
ros-z/examples/: README_actions.md  action_cancelable_task.rs  action_fibonacci.rs  action_navigation.rs  battery_state_sub.rs  example.proto  laser_scan.rs  laser_scan_pub.rs  laser_scan_sub.rs  one_way_latency.rs  pubsub.rs  pure_z_ping.rs  pure_z_pong.rs  receiver.rs  sender.rs  shm_pointcloud2.rs  twist_pub.rs  vector3_protobuf_demo.rs  z_client.rs  z_custom_message.rs  z_native_ping.rs  z_native_pong.rs  z_ping.rs  z_pingpong.rs  z_pong.rs  z_pub.rs  z_pubsub.rs  z_pubsub_multi_format.rs  z_pubsub_ros2dds.rs  z_server.rs  z_srvcli.rs  z_srvcli_ros2dds.rs  z_sub.rs  zenoh_router.rs
ros-z/src/: attachment.rs  common.rs  config.rs  context.rs  entity.rs  event.rs  graph.rs  lib.rs  msg.rs  node.rs  pubsub.rs  qos.rs  ros_msg.rs  service.rs  shm.rs  topic_name.rs  utils.rs  zbuf.rs
ros-z/tests/: action.rs  graph.rs  pubsub.rs  pubsub_qos.rs  pubsub_test.rs  queue.rs  service.rs  shm.rs  test_action_client.rs  test_action_client_validation.rs  test_action_communication.rs  test_action_compliance.rs  test_action_error_handling.rs  test_action_graph.rs  test_action_interaction.rs  test_action_lifecycle.rs  test_action_names.rs  test_action_performance.rs  test_action_remapping.rs  test_action_server.rs  test_action_server_validation.rs  test_action_types.rs  test_action_wait.rs  test_goal_handle.rs  type_info_test.rs
(+1089 files in other folders)
