[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Native Rust ROS 2 implementation using Zenoh"
homepage = "https://github.com/ZettaScaleLabs/ros-z"

[workspace]
resolver = "2"
members = ["ros-z", "rcl-z", "ros-z-codegen", "ros-z-msgs", "ros-z-tests"]

[workspace.dependencies]
# Workspace members
ros-z = { version = "*", path = "ros-z" }
rcl-z = { version = "*", path = "rcl-z" }

# Local roslibrust dependencies
roslibrust = { git = "https://github.com/YuanYuYuan/roslibrust", branch = "dev/ros-z" }
roslibrust_codegen = { git = "https://github.com/YuanYuYuan/roslibrust", branch = "dev/ros-z" }

# Serialization
cdr = "0.2.4"
cdr-encoding = { git = "https://github.com/YuanYuYuan/cdr-encoding", branch = "feat/byte-buf" }
serde = "1.0.219"
serde_bytes = "0.11"
serde_json = "1.0"

# Zenoh
zenoh = { version = "1.6.2", default-features = false, features = [
    "transport_tcp",
    "transport_serial",
] }
zenoh-ext = { version = "1.6.2" }

# CLI
clap = "4.5.45"

# Async/sync primitives
flume = "0.11.1"
parking_lot = "0.12.4"
tokio = "1.47.1"

# Utilities
tracing = "0.1.41"
strum = "0.27.2"
sha2 = "0.10.9"
slab = "0.4.11"
byteorder = "1.3"
csv = "1.3.1"
json5 = "0.4.1"
once_cell = "1.19"

# FFI
cxx = "1.0.168"

# Code generation
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
anyhow = "1.0"
glob = "0.3"

# Protobuf (optional)
prost = "0.14"
prost-build = "0.14"

# roslibrust dependencies
smart-default = "0.7"
serde-big-array = "0.5"

# Build dependencies
bindgen = "0.72.0"
cxx-build = "1.0.168"

[profile.opt]
inherits = "release"
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
