[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Native Rust ROS 2 implementation using Zenoh"
homepage = "https://github.com/ZettaScaleLabs/ros-z"

[workspace]
resolver = "2"
members = [
  "crates/ros-z",
  "crates/ros-z-cdr",
  "crates/ros-z-codegen",
  "crates/ros-z-derive",
  "crates/ros-z-protocol",
  "crates/ros-z-py",
  "crates/rmw-zenoh-rs",
  "crates/ros-z-schema",
  "crates/ros-z-msgs",
  "crates/ros-z-tests",
  "crates/ros-z-console",
  "crates/ros-z/examples/protobuf_demo",
]
default-members = ["crates/ros-z", "crates/ros-z-codegen"]
# Note: protobuf_demo is an advanced example demonstrating protobuf serialization
# Note: Go packages are in:
# - crates/ros-z-codegen-go/ (code generator)
# - crates/ros-z-go/ (runtime library)

[workspace.dependencies]
# Workspace members
ros-z = { version = "*", path = "crates/ros-z" }
ros-z-codegen = { version = "*", path = "crates/ros-z-codegen" }
ros-z-protocol = { version = "*", path = "crates/ros-z-protocol" }
rmw-zenoh-rs = { version = "*", path = "crates/rmw-zenoh-rs" }
ros-z-schema = { version = "*", path = "crates/ros-z-schema" }

# Serialization
ros-z-cdr = { path = "crates/ros-z-cdr" }
serde = "1.0.219"
serde_bytes = "0.11"
serde_json = "1.0"

# Zenoh
zenoh = { version = "1.7.2", default-features = false, features = [
  "transport_tcp",
  "transport_serial",
] }
zenoh-ext = { version = "1.7.2", features = ["unstable"] }
zenoh-buffers = { version = "1.7.2" }

# CLI
clap = "4.5.45"

# Async/sync primitives
flume = "0.11.1"
parking_lot = "0.12.4"
tokio = "1.47.1"
tokio-util = "0.7"
event-listener = "5"

# Utilities
tracing = "0.1.41"
strum = "0.27.2"
sha2 = "0.10.9"
slab = "0.4.11"
byteorder = "1.3"
csv = "1.3.1"
json5 = "0.4.1"
once_cell = "1.19"
hex = "0.4"

# FFI
cxx = "1.0.168"

# Python
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }

# Code generation
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
anyhow = "1.0"
glob = "0.3"

# Protobuf (optional)
prost = "0.14"
prost-build = "0.14"

# Derive macros
smart-default = "0.7"
serde-big-array = "0.5"

# Build dependencies
bindgen = "0.72.0"
cxx-build = "1.0.168"

[profile.opt]
inherits = "release"
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
