[package]
name = "ros-z-book"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ros-z = { path = "../crates/ros-z" }
ros-z-msgs = { path = "../crates/ros-z-msgs" }
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.45", features = ["derive"] }
zenoh = { version = "1.6.2", default-features = false, features = [
  "transport_tcp",
  "transport_serial",
] }
csv = "1.3.1"
anyhow = "1.0"
tracing = "0.1.41"
serde = "1.0.219"
