[package]
name = "rcl-z"
version = "0.1.0"
edition = "2024"

# NOTE: This crate requires RCL (ROS Client Library) dependencies at build time.
# To build without ROS, exclude this crate from the workspace build:
#   cargo build --workspace --exclude rcl-z --exclude ros-z-msgs --exclude ros-z-tests

[dependencies]
tracing = { workspace = true }
zenoh = { workspace = true, default-features = false, features = [
  "transport_tcp",
] }
flume = { workspace = true }
parking_lot = { workspace = true }
cxx = { workspace = true }
cdr = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
ros-z = { workspace = true, features = ["rcl-z"] }
strum = { workspace = true, features = ["derive"] }

[lib]
name = "rcl_z"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
bindgen = { workspace = true }
cxx-build = { workspace = true }

[features]
# Tests that don't need any message packages
test-core = []

# Tests that need test_msgs package
test-msgs = []

# Run all tests
test-all = ["test-core", "test-msgs"]

# Legacy compatibility
test-rcl = ["test-all"]

# ROS 2 Humble compatibility
humble_compat = []
