[package]
name = "rmw-zenoh-rs"
version = "0.1.0"
edition = "2024"

# NOTE: This crate requires RMW (ROS Middleware) dependencies at build time.
# To build without ROS, exclude this crate from the workspace build:
#   cargo build --workspace --exclude rmw-zenoh-rs --exclude ros-z-msgs --exclude ros-z-tests

[dependencies]
tracing = { workspace = true }
zenoh = { workspace = true, default-features = false, features = [
  "transport_tcp",
] }
zenoh-buffers = { workspace = true }
flume = { workspace = true }
parking_lot = { workspace = true }
cxx = { workspace = true }
ros-z-cdr = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
ros-z = { workspace = true, features = ["rmw"] }
strum = { workspace = true, features = ["derive"] }

[lib]
name = "rmw_zenoh_rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
bindgen = { workspace = true }
cxx-build = { workspace = true }

[features]
# Tests that don't need any message packages
test-core = []

# Tests that need test_msgs package
test-msgs = []

# Run all tests
test-all = ["test-core", "test-msgs"]

# Legacy compatibility
test-rmw = ["test-all"]
