[package]
name = "ros-z-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
# Use local roslibrust for message parsing and code generation
roslibrust_codegen = { path = "../../roslibrust/roslibrust_codegen" }
# For code manipulation
quote = "1.0"
prost-build = { version = "0.13", optional = true }
syn = "2.0"
proc-macro2 = "1.0"
# For error handling
anyhow = "1.0"

[features]
default = ["roslibrust", "protobuf"]
roslibrust = []
protobuf = ["prost-build"]
