[package]
name = "ros-z-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
# Use local roslibrust for message parsing and code generation
roslibrust_codegen = { workspace = true }
# For code manipulation
quote = { workspace = true }
prost-build = { workspace = true, optional = true }
syn = { workspace = true, features = ["full", "parsing"] }
proc-macro2 = { workspace = true }
prettyplease = "0.2"
# For error handling
anyhow = { workspace = true }

[features]
default = []
protobuf = ["prost-build"]
