[package]
name = "ros-z-msgs"
version.workspace = true
edition.workspace = true

[dependencies]
ros-z = { path = "../ros-z", default-features = false }
serde = { workspace = true }
serde_bytes = { workspace = true }
# Required by roslibrust-generated code
roslibrust = { workspace = true, features = ["codegen"] }
roslibrust_codegen = { workspace = true }
smart-default = { workspace = true }
serde-big-array = { workspace = true }

prost = { workspace = true, optional = true }

[dev-dependencies]
cdr = { workspace = true }

[build-dependencies]
ros-z-codegen = { version = "0.1", path = "../ros-z-codegen" }
anyhow = { workspace = true }
glob = { workspace = true }

[features]
default = ["bundled_msgs"]

# Bundled messages - available without ROS installation via roslibrust assets
# These are included in the roslibrust git repository and work offline
bundled_msgs = ["std_msgs", "geometry_msgs", "sensor_msgs", "nav_msgs"]
std_msgs = []
geometry_msgs = ["std_msgs"]
sensor_msgs = ["std_msgs", "geometry_msgs"]  # sensor_msgs depends on geometry_msgs types
nav_msgs = ["std_msgs", "geometry_msgs"]

# External messages - require ROS 2 installation
# These packages are not bundled with roslibrust and must be found in the system
external_msgs = ["example_interfaces"]
example_interfaces = []

# Convenience feature for common ROS 2 interfaces (bundled only)
common_interfaces = ["std_msgs", "geometry_msgs", "sensor_msgs"]

# All messages (bundled + external) - requires ROS 2 installation
all_msgs = ["bundled_msgs", "external_msgs"]

protobuf = ["prost", "ros-z/protobuf", "ros-z-codegen/protobuf"]
