[package]
name = "ros-z-msgs"
version.workspace = true
edition.workspace = true

[dependencies]
ros-z = { path = "../ros-z", default-features = false }
serde = { workspace = true }
serde_bytes = { workspace = true }
# Required by pure-Rust codegen
smart-default = { workspace = true }
serde-big-array = { workspace = true }
zenoh-buffers = { workspace = true }

prost = { workspace = true, optional = true }

[dev-dependencies]
cdr = { workspace = true }

[build-dependencies]
ros-z-codegen = { version = "0.1", path = "../ros-z-codegen" }
anyhow = { workspace = true }
glob = { workspace = true }

[features]
default = ["core_msgs", "jazzy"]

# Core messages - commonly used ROS 2 interfaces
core_msgs = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "example_interfaces",
  "action_tutorials_interfaces",
]

# Individual packages (all vendored in assets)
std_msgs = []
geometry_msgs = ["std_msgs"]
sensor_msgs = ["std_msgs", "geometry_msgs"]
nav_msgs = ["std_msgs", "geometry_msgs"]
example_interfaces = []
action_tutorials_interfaces = []
test_msgs = []

# Convenience aliases
common_interfaces = ["std_msgs", "geometry_msgs", "sensor_msgs"]
robotics = ["core_msgs"]
all_msgs = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "example_interfaces",
  "action_tutorials_interfaces",
  "test_msgs",
]

bundled_msgs = ["std_msgs", "geometry_msgs", "sensor_msgs", "nav_msgs"]

protobuf = ["prost", "ros-z/protobuf", "ros-z-codegen/protobuf"]

# ROS 2 distro compatibility - propagate to ros-z
humble = ["ros-z/humble"]
jazzy = ["ros-z/jazzy"]
rolling = ["ros-z/rolling"]
iron = ["ros-z/iron"]
