[package]
name = "ros-z-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ros-z = { path = "../ros-z" }
ros-z-msgs = { path = "../ros-z-msgs" }
# rcl-z = { path = "../rcl-z" }

# Test runtime dependencies
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true }  # For lazy static zenohd daemon

[features]
default = []
interop-tests = []
