[package]
name = "ros-z-tests"
version.workspace = true
edition.workspace = true
publish = false

# NOTE: This crate requires ros-z-msgs (which needs ROS dependencies) for integration tests.
# To build without ROS, exclude this crate from the workspace build:
#   cargo build --workspace --exclude rcl-z --exclude ros-z-msgs --exclude ros-z-tests

[dependencies]
ros-z = { path = "../ros-z" }
ros-z-msgs = { path = "../ros-z-msgs", optional = true }
# rcl-z = { path = "../rcl-z" }

# Test runtime dependencies
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true } # For lazy static zenohd daemon
serial_test = "3.0" # For sequential test execution
nix = { version = "0.29", features = [
  "signal",
] } # For graceful process shutdown

[features]
default = []
ros-msgs = ["dep:ros-z-msgs"]
interop-tests = ["ros-msgs", "ros-z-msgs/external_msgs"]
