[package]
name = "ros-z-tests"
version.workspace = true
edition.workspace = true
publish = false

# NOTE: This crate requires ros-z-msgs (which needs ROS dependencies) for integration tests.
# To build without ROS, exclude this crate from the workspace build:
#   cargo build --workspace --exclude rcl-z --exclude ros-z-msgs --exclude ros-z-tests

[dependencies]
ros-z = { path = "../ros-z", default-features = false, features = ["protobuf"] }
ros-z-msgs = { path = "../ros-z-msgs", optional = true }
# rcl-z = { path = "../rcl-z" }
protobuf_demo = { path = "../ros-z/examples/protobuf_demo" }

# Test runtime dependencies
zenoh = { workspace = true } # For per-test router sessions
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true } # For lazy static zenohd daemon
serial_test = "3.0" # For sequential test execution
nix = { version = "0.29", features = [
  "signal",
] } # For graceful process shutdown
prost = { workspace = true } # For protobuf service tests

[features]
default = []
ros-msgs = ["dep:ros-z-msgs"]
external_msgs = ["ros-msgs", "ros-z/external_msgs", "ros-z-msgs/external_msgs"]
interop-tests = ["external_msgs"]

humble = ["ros-z/humble"]
