[package]
name = "ros-z"
version = "0.1.0"
edition = "2024"

[dependencies]
cdr = { workspace = true }
clap = { workspace = true, features = ["derive"] }
flume = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
tracing = { workspace = true }
zenoh = { workspace = true, default-features = false, features = [
  "transport_tcp",
  "unstable",
] }
zenoh-ext = { workspace = true }
strum = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
parking_lot = { workspace = true }
csv = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
slab = { workspace = true }
serde_json = { workspace = true }
dashmap = "5.5"
prost = { workspace = true, optional = true }
cdr-encoding = { workspace = true }
byteorder = { workspace = true }
json5 = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
paste = "1.0"

[dev-dependencies]
ros-z-msgs = { path = "../ros-z-msgs" }

[build-dependencies]
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
zenoh = { workspace = true, default-features = false, features = [
  "transport_tcp",
  "unstable",
] }
prost-build = { workspace = true, optional = true }

[features]
default = ["config-builders"]
config-builders = []
generate-configs = []
protobuf = ["prost", "prost-build"]
rcl-z = []
# Feature to enable examples that require external ROS message packages
external_msgs = ["ros-z-msgs/external_msgs"]

# NOTE: Examples that use ros-z-msgs must be built from workspace root
# since ros-z-msgs depends on ros-z (circular dependency prevents direct dependency)

# Examples that work without ros-z-msgs (using custom Rust-defined messages)
[[example]]
name = "z_custom_message"
required-features = []

# Examples using ros-z-msgs with bundled messages (no ROS installation required)
# These use messages from roslibrust assets: std_msgs, geometry_msgs, sensor_msgs
[[example]]
name = "z_pubsub"
required-features = []

[[example]]
name = "z_pingpong"
required-features = []

[[example]]
name = "twist_pub"
required-features = []

[[example]]
name = "battery_state_sub"
required-features = []

[[example]]
name = "laser_scan"
required-features = []

[[example]]
name = "demo_nodes_talker"
path = "examples/demo_nodes/talker.rs"
required-features = []

[[example]]
name = "demo_nodes_listener"
path = "examples/demo_nodes/listener.rs"
required-features = []

[[example]]
name = "demo_nodes_add_two_ints_server"
path = "examples/demo_nodes/add_two_ints_server.rs"
required-features = ["external_msgs"]

[[example]]
name = "demo_nodes_add_two_ints_client"
path = "examples/demo_nodes/add_two_ints_client.rs"
required-features = ["external_msgs"]

[[example]]
name = "demo_nodes_fibonacci_action_client"
path = "examples/demo_nodes/fibonacci_action_client.rs"
required-features = ["external_msgs"]

[[example]]
name = "demo_nodes_fibonacci_action_server"
path = "examples/demo_nodes/fibonacci_action_server.rs"
required-features = ["external_msgs"]

# Examples using external messages (requires ROS 2 installation)
# Note: z_srvcli uses example_interfaces which requires ROS 2.
# Build with: cargo build --example z_srvcli --features external_msgs
[[example]]
name = "z_srvcli"
required-features = ["external_msgs"]

[[example]]
name = "zenoh_router"
path = "examples/zenoh_router.rs"
required-features = []
