[package]
name = "ros-z"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
flume = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
tracing = { workspace = true }
zenoh = { workspace = true, default-features = false, features = [
  "transport_tcp",
  "unstable",
  "internal",
] }
zenoh-ext = { workspace = true }
zenoh-buffers = { workspace = true }
strum = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
parking_lot = { workspace = true }
csv = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
event-listener = { workspace = true }
slab = { workspace = true }
serde_json = { workspace = true }
dashmap = "5.5"
prost = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
ros-z-cdr = { workspace = true }
ros-z-codegen = { workspace = true, optional = true }
byteorder = { workspace = true }
json5 = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
paste = "1.0"

[dev-dependencies]
ros-z-msgs = { path = "../ros-z-msgs" }
ros-z-codegen = { path = "../ros-z-codegen" }

[build-dependencies]
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
zenoh = { workspace = true, default-features = false, features = [
  "transport_tcp",
  "unstable",
  "internal",
] }
prost-build = { workspace = true, optional = true }

[features]
default = ["config-builders", "jazzy"]
config-builders = []
generate-configs = []
protobuf = ["prost", "prost-build"]
python = ["pyo3"]
rmw = []
# Dynamic message schema loading from .msg files (optional)
dynamic-schema-loader = ["ros-z-codegen"]

# ROS 2 distro compatibility features
# Default is jazzy (recommended for new projects)
# For humble, use: --no-default-features --features humble,...
# Note: Distro features are mutually exclusive - enabling multiple may cause conflicts
humble = ["no-type-hash", "no-jazzy", "no-rolling", "no-kilted"]
jazzy = ["type-hash", "no-humble", "no-rolling", "no-kilted"]
rolling = ["type-hash", "no-humble", "no-jazzy", "no-kilted"]
kilted = ["type-hash", "no-humble", "no-jazzy", "no-rolling"]

# Internal features for distro compatibility
humble-compat = []
type-hash = []
no-type-hash = []

# Feature conflict markers (empty features to mark mutual exclusion)
no-humble = []
no-jazzy = []
no-rolling = []
no-kilted = []


# NOTE: Examples that use ros-z-msgs must be built from workspace root
# since ros-z-msgs depends on ros-z (circular dependency prevents direct dependency)

# Examples that work without ros-z-msgs (using custom Rust-defined messages)
[[example]]
name = "z_custom_message"
required-features = []

# Examples using ros-z-msgs with bundled messages (no ROS installation required)
# These use messages from ros-z-codegen/assets/jazzy: std_msgs, geometry_msgs, sensor_msgs
[[example]]
name = "z_pubsub"
required-features = []

[[example]]
name = "z_pingpong"
required-features = []

[[example]]
name = "twist_pub"
required-features = []

[[example]]
name = "battery_state_sub"
required-features = []

[[example]]
name = "laser_scan"
required-features = []

[[example]]
name = "demo_nodes_talker"
path = "examples/demo_nodes/talker.rs"
required-features = []

[[example]]
name = "demo_nodes_listener"
path = "examples/demo_nodes/listener.rs"
required-features = []

[[example]]
name = "demo_nodes_add_two_ints_server"
path = "examples/demo_nodes/add_two_ints_server.rs"

[[example]]
name = "demo_nodes_add_two_ints_client"
path = "examples/demo_nodes/add_two_ints_client.rs"

[[example]]
name = "demo_nodes_fibonacci_action_client"
path = "examples/demo_nodes/fibonacci_action_client.rs"

[[example]]
name = "demo_nodes_fibonacci_action_server"
path = "examples/demo_nodes/fibonacci_action_server.rs"

[[example]]
name = "z_srvcli"

[[example]]
name = "zenoh_router"
path = "examples/zenoh_router.rs"
required-features = []

# Dynamic message examples
[[example]]
name = "dynamic_message_basic"
path = "examples/dynamic_message/basic.rs"
required-features = []

[[example]]
name = "dynamic_message_serialization"
path = "examples/dynamic_message/serialization.rs"
required-features = []

[[example]]
name = "dynamic_message_interop"
path = "examples/dynamic_message/interop.rs"
required-features = []
