[package]
name = "rmw-zenoh-rs"
version = "0.1.0"
edition = "2024"
description = "ROS 2 RMW (ROS Middleware) implementation using Zenoh - Requires ROS 2 Iron or later"

# IMPORTANT: This crate requires ROS 2 Iron (2023) or later
#
# ROS 2 Humble (2022) is NOT supported due to missing RMW APIs:
#   - Type introspection/hashing (REP 2011)
#   - Discovery options (REP 2019)
#   - FastCDR v2 API
#
# Humble users: Use ros-z core library or rmw_zenoh_cpp instead
# See: https://zettascalelabs.github.io/ros-z/advanced/rmw-zenoh-rs.html
#
# Build Requirements:
#   - ROS 2 Iron, Jazzy, Kilted, or Rolling
#   - RMW development headers
#   - To build without ROS:
#     cargo build --workspace --exclude rmw-zenoh-rs --exclude ros-z-msgs --exclude ros-z-tests

[dependencies]
tracing = { workspace = true }
zenoh = { workspace = true, default-features = false, features = [
  "transport_tcp",
] }
zenoh-buffers = { workspace = true }
flume = { workspace = true }
parking_lot = { workspace = true }
cxx = { workspace = true }
ros-z-cdr = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
ros-z = { workspace = true, features = ["rmw"] }
ros-z-protocol = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[lib]
name = "rmw_zenoh_rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
bindgen = { workspace = true }
cxx-build = { workspace = true }

[features]
# Tests that don't need any message packages
test-core = []

# Tests that need test_msgs package
test-msgs = []

# Run all tests
test-all = ["test-core", "test-msgs"]

# Legacy compatibility
test-rmw = ["test-all"]
