[package]
name = "ros-z-bridge-ros2dds"
version.workspace = true
edition.workspace = true
description = "Bridge between DDS-based ROS 2 nodes and Zenoh via ros-z"

[[bin]]
name = "ros-z-bridge-ros2dds"
path = "src/main.rs"

[dependencies]
cyclors = "=0.2.7"
ros-z = { path = "../ros-z" }
ros-z-protocol = { path = "../ros-z-protocol", features = ["std", "rmw-zenoh"] }
zenoh = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
flume = { workspace = true }
parking_lot = { workspace = true }
regex = "1.10"
hex = { workspace = true }

[features]
default = ["jazzy"]
jazzy = ["ros-z/jazzy"]
humble = ["ros-z/humble"]
kilted = ["ros-z/kilted"]
