[package]
name = "ros-z-bridge"
version.workspace = true
edition.workspace = true
description = "Bridge between ROS 2 Humble and Jazzy Zenoh networks via key expression translation"

[[bin]]
name = "ros-z-bridge"
path = "src/main.rs"

[dependencies]
ros-z-protocol = { path = "../ros-z-protocol", features = ["std", "rmw-zenoh"] }
ros-z-msgs = { path = "../ros-z-msgs", default-features = false, features = [
  "core_msgs",
] }
ros-z = { path = "../ros-z" }

zenoh = { workspace = true }

tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }

[features]
default = ["jazzy"]
jazzy = ["ros-z-msgs/jazzy"]
humble = ["ros-z-msgs/humble", "ros-z/humble"]
