[package]
name = "ros-z-cdr"
version.workspace = true
edition.workspace = true
description = "CDR serialization for ros-z"

[dependencies]
serde = { workspace = true }
byteorder = { workspace = true }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
zenoh-buffers = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
